# ProtobufBenchmarking

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md
Proto/: EntityUpdate.proto
Src/: EntityUpdate.pb.cc  EntityUpdate.pb.h  main.cpp
